--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^5.11.2",
         "@vuex-orm/core": "^0.33.0",
         "admin-lte": "^3.0.0",
+        "babel-polyfill": "^6.26.0",
         "bootstrap-select": "^1.13.12",
         "datatables.net-bs4": "^1.10.20",
         "laravel-vue-pagination": "^2.3.1",
@@ -38,7 +39,8 @@
         "vue-progressbar": "^0.7.5",
         "vue-select": "^3.2.0",
         "vuejs-datepicker": "^1.6.2",
-        "vuex": "^3.1.2"
+        "vuex": "^3.1.2",
+        "whatwg-fetch": "^3.0.0"
     },
     "babel": {
         "plugins": [
